# domus

./: .env-example  Cargo.toml  DB_Schema.md  Dockerfile  ProjectIdea.md  compose-dev.yaml  compose.yaml  env
.sqlx/: query-18d853b066eea2c5adab6ece1d541cbca73dcdd5584a39c32405a2ed0231f27d.json  query-6f0d1c7a6727e2aef276708a79e12fce93048c4b82deaf1be5d9939b49184ba9.json  query-78dcd06a94475e998d0f2a8147a5bbf0d8bda585eb4f77665d3ee7af6d9dfa5f.json  query-7ce985d63ddb7b114919ab13ce3400678ccb0b0c0c1ce1fe85c2d8f585eb5efd.json  query-a3ea7e581aa7c385a876e25ec18f2b7c59d1e53d7b7bb184310d4fb6204aa2b0.json  query-a420c536b6de4af35f1f58e63ab35dcf29a1cf201a3a07f745fb3bb228ccfa3d.json  query-a87e5c9432d201ca0ff85eda156390cf5e690ea62c6efa47772e2e5977bbdc0b.json  query-c13491c86a0b041efb9c98f5ca958fdd0fd316fd3ad669a0e987ca907cafccd4.json  query-e5e586ea6b4f04cd2fdeb19fedf8173a3478c86a957207b4ca1d5af1b99dd36d.json  query-ec7f2f8e41c05756a90c43ac49a630f9b0a132b019e927fa648419b4527cd712.json
http/: platform.http
migrations/: 20260417095350_init.down.sql  20260417095350_init.up.sql  20260421113129_platform-roles.down.sql  20260421113129_platform-roles.up.sql  20260422234857_canonical-email.down.sql  20260422234857_canonical-email.up.sql
src/: app.rs  error.rs  extractor.rs  jwt.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/platform/: claims.rs  domain.rs  dto.rs  error.rs  handler.rs  mod.rs  query.rs  service.rs  types.rs
src/util/: mod.rs  password.rs  serde.rs
tests/: platform.rs
tests/platform/: helpers.rs  login.rs  me.rs  (+2 more)
yaak/: yaak.fl_XbFGQjPq4m.yaml  yaak.rq_CBRcscz8Qm.yaml  yaak.wk_533SkqsY2E.yaml
